--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <!--<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-webflux</artifactId>
+            <version>5.0.0.M5</version>
+        </dependency>-->
+
 
         <!-- Тестирование -->
         <dependency>
